--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,7 +48,15 @@ x-airflow-common:
   # build: .
   environment:
     &airflow-common-env
-    _PIP_ADDITIONAL_REQUIREMENTS: psycopg2-binary
+    # _PIP_ADDITIONAL_REQUIREMENTS: >-
+    #   psycopg2-binary requests==2.25.1 pandas==2.2.1 psycopg2==2.9.7 SQLAlchemy==1.4.51 
+    #   redshift_connector==2.1.0
+
+    _PIP_ADDITIONAL_REQUIREMENTS: >-
+      psycopg2-binary requests==2.25.1 pandas==2.0.3 SQLAlchemy==1.4.51 
+      redshift_connector==2.1.0
+
+
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     # For backward compatibility, with Airflow <2.3
@@ -93,7 +101,7 @@ services:
 
   airflow-webserver:
     <<: *airflow-common
-    command: webserver
+    command: webserver  
     ports:
       - 8080:8080
     healthcheck:
@@ -115,7 +123,7 @@ services:
   airflow-init:
     <<: *airflow-common
     # yamllint disable rule:line-length
-    command: version
+    command: version 
     environment:
       <<: *airflow-common-env
       _AIRFLOW_DB_UPGRADE: 'true'
