--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,13 +48,13 @@ x-airflow-common:
   # build: .
   environment:
     &airflow-common-env
-    # _PIP_ADDITIONAL_REQUIREMENTS: >-
-    #   psycopg2-binary requests==2.25.1 pandas==2.2.1 psycopg2==2.9.7 SQLAlchemy==1.4.51 
-    #   redshift_connector==2.1.0
-
     _PIP_ADDITIONAL_REQUIREMENTS: >-
-      psycopg2-binary requests==2.25.1 pandas==2.0.3 SQLAlchemy==1.4.51 
+      psycopg2-binary requests==2.25.1 pandas==2.2.1 psycopg2==2.9.7 SQLAlchemy==1.4.51 
       redshift_connector==2.1.0
+
+    # _PIP_ADDITIONAL_REQUIREMENTS: >-
+    #   psycopg2-binary requests==2.25.1 pandas==2.0.3 SQLAlchemy==1.4.51 
+    #   redshift_connector==2.1.0
 
 
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
