--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,17 +44,17 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.3}
-  # build: .
+  #image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.3}
+  build: .
   environment:
     &airflow-common-env
     # _PIP_ADDITIONAL_REQUIREMENTS: >-
     #   psycopg2-binary requests==2.25.1 pandas==2.2.1 psycopg2==2.9.7 SQLAlchemy==1.4.51 
     #   redshift_connector==2.1.0
 
-    _PIP_ADDITIONAL_REQUIREMENTS: >-
-      psycopg2-binary requests==2.25.1 pandas==2.0.3 SQLAlchemy==1.4.51 
-      redshift_connector==2.1.0
+    # _PIP_ADDITIONAL_REQUIREMENTS: >-
+    #   psycopg2-binary requests==2.25.1 pandas==2.0.3 SQLAlchemy==1.4.51 
+    #   redshift_connector==2.1.0
 
 
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
